# ThinSlide

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
.github/workflows/: release.yml
scripts/: package_macos_app.sh
src/: args.rs  bindings.rs  lib.rs  logger.rs  main.rs  tiffds.rs
src/pipeline/: encode.rs  icc.rs  mod.rs  ome.rs  writer.rs
src/pipeline/writer/: flat.rs  mod.rs  ome.rs  resampled.rs  svs.rs
src/source/: dicom.rs  mod.rs  mrxs.rs  tiff.rs  vsi.rs
