[package]
name = "slide-leaner"
version = "0.1.0"
edition = "2024"
links = "tiff"

[[bin]]
name = "slean"
path = "src/bin/slean.rs"

[[bin]]
name = "slean-gui"
path = "src/bin/slean_gui.rs"

[build-dependencies]
pkg-config = "0.3"

[dependencies]
rayon = "1"
turbojpeg = "1"
fast_image_resize = "4"
jpeg2k = { version = "0.10", features = ["openjp2"], default-features = false }
indicatif = "0.17"
dicom = "0.9.0"
dicom-core = "0.9.0"
dicom-dictionary-std = "0.9.0"
dicom-object = "0.9.0"
dicom-pixeldata = { version = "0.9.0", features = ["image", "openjp2"] }
image = "0.25"
tiff = "0.11.3"
walkdir = "2.5.0"
memmap2 = "0.9"
lcms2 = "6.1"
eframe = { version = "0.29", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
rfd = "0.14"
portable-pty = "0.8"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
clap = { version = "4", features = ["derive"] }
